--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <header class="header">
-<h1>Mon Entreprise</h1>
+<h1> <span style="color: rgb(118, 25, 25); font-weight: bold;">kanto</span>tech</h1>
 <nav>
 <a href="index.html">Accueil</a>
 <a href="about.html">À propos</a>
