--- a/contact.html
+++ b/contact.html
@@ -18,8 +18,8 @@
 
 
 <main class="content">
-<p>Email : contact@monsite.com</p>
-<p>Téléphone : +261 34 00 000 00</p>
+<p>Email : niainakanto691@gmail.com</p>
+<p>Téléphone : 0340942169</p>
 </main>
 </body>
 </html>
