--- a/index.html
+++ b/index.html
@@ -1,34 +1,35 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Mon Site Vitrine</title>
-<link rel="stylesheet" href="css/style.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Kantoniaina</title>
+    <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-<header class="header">
-<h1> <span style="color: rgb(0, 0, 0); font-weight: bold;">KantO</span> Tech</h1>
-<nav>
-<a href="index.html">Accueil</a>
-<a href="about.html">À propos</a>
-<a href="contact.html">Contact</a>
-</nav>
-</header>
+  <header class="header">
+    <h1>
+      <span class="logo-accent">KantO</span> Tech
+    </h1>
 
+    <nav class="nav">
+      <a href="index.html">Accueil</a>
+      <a href="about.html">À propos</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </header>
 
-<main class="hero">
-<h2>Bienvenue sur notre site</h2>
-<p>Nous proposons des services professionnels et modernes.</p>
-<button onclick="sayHello()">Nous contacter</button>
-</main>
+  <main class="hero">
+    <h2>Bienvenue sur notre site</h2>
+    <p>Nous proposons des services professionnels et modernes.</p>
+    <button onclick="sayHello()">Nous contacter</button>
+  </main>
 
+  <footer class="footer">
+    <p>© 2026 Kantoniaina — Tous droits réservés</p>
+  </footer>
 
-<footer>
-<p>© 2026 Mon Entreprise</p>
-</footer>
-
-
-<script src="js/main.js"></script>
+  <script src="js/main.js"></script>
 </body>
+
 </html>
