--- a/contact.html
+++ b/contact.html
@@ -1,25 +1,36 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Contact</title>
-<link rel="stylesheet" href="css/style.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Contact</title>
+    <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-<header class="header">
-<h1>Contact</h1>
-<nav>
-<a href="index.html">Accueil</a>
-<a href="about.html">À propos</a>
-<a href="contact.html">Contact</a>
-</nav>
-</header>
+  <header class="header">
+    <h1>
+      <span class="logo-accent">KantO</span> Tech
+    </h1>
 
+    <nav class="nav">
+      <a href="index.html">Accueil</a>
+      <a href="about.html">À propos</a>
+      <a href="contact.html" class="active">Contact</a>
+    </nav>
+  </header>
 
-<main class="content">
-<p>Email : niainakanto691@gmail.com</p>
-<p>Téléphone : 0340942169</p>
-</main>
+  <main class="content">
+    <h2>Contactez-nous</h2>
+
+    <div class="contact-card">
+      <p><strong>Email :</strong> <a href="mailto:niainakanto691@gmail.com">niainakanto691@gmail.com</a></p>
+      <p><strong>Téléphone :</strong> <a href="tel:+261340942169">+261 34 09 421 69</a></p>
+    </div>
+  </main>
+
+  <footer class="footer">
+    <p>© 2026 Kantoniaina — Tous droits réservés</p>
+  </footer>
 </body>
+
 </html>
